[tool.poetry]
name = "nature-remo-e_exporter"
version = "0.1.0"
description = ""
authors = ["Hirotaka Ichikawa <hichtakk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prometheus_client = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
